enabled preview in surefire dure to usage of switch pattern matching